--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 </head>
 
 <body>
-    <h1>My first work</h1>
+	<section>
+    	<h1>Learn Java Script</h1>
+    	<ul>
+    		<li><a href="./Types">Types</a></li>
+    		<li><a href="./Console">Console</a></li>
+    		<li><a href="./MathOperators">Math Operators</a></li>
+    		<li><a href="./MathOperatorsII">Math Operators II</a></li>
+    		<li><a href="./MathOperatorsII">Random</a></li>
+    		<li><a href="./MathOperatorsII">Comments</a></li>
+    	</ul>
+    </section>
 </body>
 
 </html>
