Creating a variable and control flow

--- a/index.html
+++ b/index.html
@@ -8,16 +8,32 @@
 </head>
 
 <body>
-	<section>
-    	<h1>Learn Java Script</h1>
-    	<ul>
-    		<li><a href="./IntroductionToJavaScript/Types">Types</a></li>
-    		<li><a href="./IntroductionToJavaScript/Console">Console</a></li>
-    		<li><a href="./IntroductionToJavaScript/MathOperators">Math Operators</a></li>
-    		<li><a href="./IntroductionToJavaScript/MathOperatorsII">Math Operators II</a></li>
-    		<li><a href="./IntroductionToJavaScript/Random">Random</a></li>
-    		<li><a href="./IntroductionToJavaScript/Comments">Comments</a></li>
-    	</ul>
+    <section>
+        <h1>Learn Java Script</h1>
+        <ul>
+            <li><a href="./IntroductionToJavaScript/Types">Types</a></li>
+            <li><a href="./IntroductionToJavaScript/Console">Console</a></li>
+            <li><a href="./IntroductionToJavaScript/MathOperators">Math Operators</a></li>
+            <li><a href="./IntroductionToJavaScript/MathOperatorsII">Math Operators II</a></li>
+            <li><a href="./IntroductionToJavaScript/Random">Random</a></li>
+            <li><a href="./IntroductionToJavaScript/Comments">Comments</a></li>
+        </ul>
+    </section>
+    <section>
+        <h1>Variables</h1>
+        <ul>
+            <li><a href="./Variables/CreateVariable">Creating Variables</a></li>
+            <li><a href="./Variables/changeVariable">Change Variable</a></li>
+            <li><a href="./Variables/stringInterpolation">String Interpolation</a></li>
+        </ul>
+    </section>
+    <section>
+        <h1>Control Flow</h1>
+        <ul>
+            <li><a href="./ControlFlow/ifElse">If Else</a></li>
+            <li><a href="./ControlFlow/comparison">Comparison</a></li>
+            <li><a href="./ControlFlow/werewolf">Werewolf</a></li>
+        </ul>
     </section>
 </body>
 
